; ModuleID = '/home/carl/AnghaBench/mpv/osdep/extr_timer-win2.c_mp_sleep_us.c'
source_filename = "/home/carl/AnghaBench/mpv/osdep/extr_timer-win2.c_mp_sleep_us.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_sleep_us(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp slt i32 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %14

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = icmp slt i32 %7, 1000
  br i1 %8, label %9, label %10

9:                                                ; preds = %6
  store i32 1000, i32* %2, align 4
  br label %10

10:                                               ; preds = %9, %6
  %11 = load i32, i32* %2, align 4
  %12 = sdiv i32 %11, 1000
  %13 = call i32 @Sleep(i32 %12)
  br label %14

14:                                               ; preds = %10, %5
  ret void
}

declare dso_local i32 @Sleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
